# booking-rooms

./: Cargo.toml  Dockerfile  README.md  compose.yaml
app/: Cargo.toml  Dockerfile
app/src/: main.rs  room.rs
calgary_central_library/: Cargo.toml
calgary_central_library/src/: fantoccini_impl.rs  lib.rs  room.rs
ccl_headless_browser_server/: Cargo.toml
ccl_headless_browser_server/src/: main.rs
front/: package-lock.json  package.json
front/src/: App.tsx  Calendar.tsx  Header.css  Header.tsx  SettingsDialogBody.tsx  external.ts
tauri-app/: README.md
tauri-app/bindings/: bindings.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauriless/: Cargo.toml
tauriless-js/: Cargo.toml
tauriless-js/src/: lib.rs
tauriless/src/: lib.rs
tauriless_macro/: Cargo.toml
tauriless_macro/src/: lib.rs
tauriless_macro/tests/: command.rs
wry_app/: Cargo.toml  build.rs
wry_app/src/: main.rs
