[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["clock"] }
fantoccini = "0.19.3"
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
