[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["clock"] }
fantoccini = { version = "0.19.3", default-features = false, features = [
    "rustls-tls",
] }
once_cell = "1.19.0"
regex = "1.10.3"
serde_json = "1.0.112"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
