[package]
name = "calgary_central_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
fantoccini = "0.19.3"
once_cell = "1.19.0"
regex = "1.10.3"
serde_json = "1.0.113"
thiserror = "1.0.57"
