[package]
name = "tauriless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pot = "3.0.0"
rust-embed = { version = "8.2.0", features = ["include-exclude"] }
serde = "1.0.197"
serde_json = "1.0.114"
tauriless_macro = { path = "../tauriless_macro" }
wry = "0.37.0"
