[package]
name = "wry_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-embed = "0.1.0"
rust-embed = "8.2.0"
tao = "0.25.0"
tokio = { version = "1.36.0", features = ["rt", "sync"] }
wry = "0.36.0"

[build-dependencies]
which = "6.0"
sha2 = "0.10"
